--- a/src/pages/hotInfo/index.less
+++ b/src/pages/hotInfo/index.less
@@ -1,23 +1,5 @@
-.mid {
-   display: flex;
-   justify-content: space-between;
-   width: 100%;
-   margin-bottom: 20px;
-   .mid-left,.mid-right{
-    height: 402px;
-    background: #FFFFFF;
-    border-radius: 2px;
-   }
-   .mid-left{
-     width: 65%;
-   }
-   .mid-right{
-    width: 33% ;
-   }
-}
-.foot{
-  width: 100%;
-  min-height: 402px;
-  background: #FFFFFF;
-  border-radius: 2px;
+.wrap{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
