--- a/src/components/HeaderBar/index.less
+++ b/src/components/HeaderBar/index.less
@@ -1,5 +1,8 @@
-.warp {
+.wrap {
+  z-index: 9999;
   display: flex;
+  align-items: center;
+  height: 64px;
   .avatar {
     margin-right: 24px;
     background: linear-gradient(141deg, #1c5bf0 0%, #1b44eb 100%);
