--- a/src/components/SiderBar/index.less
+++ b/src/components/SiderBar/index.less
@@ -16,11 +16,12 @@
 }
 
 .sider-header {
-  
-  padding-left: 10px;
-  height: 32px;
-  margin: 16px;
-  background: rgba(255, 255, 255, 0.3);
+  margin-top: 10px;
+  width: 100%;
+  height: 50px;
+  background-image: url(../../assets/logo.png);
+  background-position-x: center;
+  background-repeat: no-repeat;
   color: #fff;
   line-height: 32px;
   font-size: 16px;
