feat：排行榜样式

--- a/src/pages/hotel/HotelBoard/Board/index.less
+++ b/src/pages/hotel/HotelBoard/Board/index.less
@@ -3,22 +3,27 @@
   margin: 0 auto;
   h1 {
     font-size: 2rem;
+    color: #707070;
   }
-  .board-number {
-    text-decoration: none;
-    margin-right: 40px;
-    color: rgb(112, 112, 112);
+  .board-list {
+    .board-number {
+      text-decoration: none;
+      margin-right: 40px;
+    }
   }
-  .li-wrap:nth-child(1) .top-num{
-    color: #E86E2C; 
+  .board-list:nth-child(1) .board-number {
+    font-size: 2.75rem;
+    color: #e86e2c;
   }
-  .li-wrap:nth-child(2) .top-num{
-    color: #F9BA35;
+  .board-list:nth-child(2) .board-number {
+    font-size: 2.5rem;
+    color: #f9ba35;
   }
-  .li-wrap:nth-child(3) .top-num{
-    color: #F3D429;
+  .board-list:nth-child(3) .board-number {
+    font-size: 2.25rem;
+    color: #f3d429;
   }
-  .top-list{
+  .top-list {
     float: left;
     width: 65%;
     overflow: hidden;
