--- a/src/pages/hotel/HotelStudyGuide/GraphLable/index.less
+++ b/src/pages/hotel/HotelStudyGuide/GraphLable/index.less
@@ -2,6 +2,19 @@
   background: white;
 }
 
+.bar-wrap {
+  display: flex;
+  padding: 20px;
+}
+.edit-btn {
+  margin-right: 20px;
+}
+.edit-btn-bar-hidden {
+  display: none;
+}
+.edit-btn-bar {
+  display: flex;
+}
 .editorContainer {
   width: 1380px;
   margin: 0 auto;
