--- a/src/components/HeaderBar/index.less
+++ b/src/components/HeaderBar/index.less
@@ -1,11 +1,16 @@
 .wrap {
   z-index: 9999;
   display: flex;
-  align-items: center;
-  height: 64px;
+  justify-content: space-between;
+  width: 100%;  
+  .search-wrap {
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
   .avatar {
     margin-right: 24px;
-    background: linear-gradient(141deg, #1c5bf0 0%, #1b44eb 100%);
+    
     cursor: pointer;
   }
 }
