--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -4,6 +4,9 @@
 .site-layout-header {
 	z-index: 999;
 	position: sticky;
+	display: flex;
+	align-items: center;
+	height: 58px;
   top: 0;
   background: #fff;
 }
