--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -9,6 +9,15 @@
   font-size: 16px;
   cursor: pointer;
 }
+.site-layout-header {
+	z-index: 999;
+	position: sticky;
+	display: flex;
+	align-items: center;
+	height: 58px;
+	background: #002649;
+  top: 0;
+}
 .wrap{
   position: relative;
   margin: 15vh auto;
