--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -10,15 +10,16 @@
   cursor: pointer;
 }
 .site-layout-header {
-	z-index: 999;
-	position: sticky;
-	display: flex;
-	align-items: center;
-	height: 58px;
-	background: #002649;
+  z-index: 999;
+  position: sticky;
+  display: flex;
+  align-items: center;
+  height: 58px;
+  background-image: linear-gradient(45deg, #002649 0%, #004f6a 100%);
+  box-shadow: 1px 2px 5px #002649;
   top: 0;
 }
-.wrap{
+.wrap {
   position: relative;
   margin: 15vh auto;
   display: flex;
@@ -33,4 +34,303 @@
   max-height: 300px;
   background: black;
   margin: 10px auto;
+}
+
+.container {
+  position: relative;
+  min-height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+.container::before {
+  content: ' ';
+  position: absolute;
+  width: 2000px;
+  height: 2000px;
+  border-radius: 50%;
+  background-image: linear-gradient(-45deg, #002649 0%, #04befe 100%);
+  transition: 1.8s ease-in-out;
+  z-index: 6;
+  top: -10%;
+  right: 48%;
+  transform: translateY(-50%);
+}
+.container.sign-up-mode::before {
+  transform: translate(100%, -50%);
+}
+
+.form-warp {
+  width: 50%;
+  position: absolute;
+  z-index: 5;
+  left: 75%;
+  top: 50%;
+  z-index: 5;
+  transform: translate(-50%, -50%);
+  display: grid;
+  grid-template-columns: 1fr;
+  transition: 1s 0.7s ease-in-out;
+}
+.form-warp form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  /* 将两个 form 布局在 grid 同一位置 */
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+  transition: all 0.2s 0.7s;
+  opacity: 1;
+  z-index: 4;
+}
+.form-title {
+  margin: 0;
+  position: relative;
+  left: -120px;
+  color: #002649;
+}
+
+.form-warp .sign-up-form {
+  opacity: 0;
+  z-index: 3;
+}
+.container.sign-up-mode .form-warp {
+  left: 25%;
+}
+.container.sign-up-mode .sign-in-form {
+  opacity: 0;
+  z-index: 3;
+}
+.container.sign-up-mode .sign-up-form {
+  opacity: 1;
+  z-index: 4;
+}
+.submit-btn {
+  min-width: 300px;
+  outline: none;
+  padding: 12px 30px;
+  line-height: 1;
+  font-size: 16px;
+  border-radius: 3px;
+  color: #333;
+  background-color: #6267f513;
+  border: none;
+}
+.input {
+  min-width: 300px;
+  width: 300px;
+  outline: none;
+  padding: 12px 30px;
+  line-height: 1;
+  font-size: 16px;
+  border-radius: 3px;
+  color: #333;
+  border: none;
+}
+.input::placeholder {
+  color: #cccc;
+}
+.submit-btn {
+  background-color: #002649;
+  color: #fff;
+  text-align: center;
+  min-width: 150px;
+  font-size: initial;
+  font-weight: bold;
+  letter-spacing: 1.5px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.submit-btn:hover {
+  background-color: #00478a;
+}
+.desc-warp {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.desc-warp-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-around;
+  text-align: center;
+  text-align: center;
+  padding: 3rem 17% 2rem 12%;
+  z-index: 6;
+}
+/* 事件穿透 BEGIN */
+.sign-in-desc {
+  pointer-events: none;
+}
+.sign-up-mode .sign-in-desc {
+  pointer-events: all;
+}
+.sign-up-mode .sign-up-desc {
+  pointer-events: none;
+}
+/* 事件穿透 END */
+.content {
+  width: 100%;
+  transition: transform 0.9s ease-in-out;
+  transition-delay: 0.6s;
+}
+.content-title {
+  color: #fff;
+}
+.sign-in-desc img,
+.sign-in-desc .content {
+  transform: translateX(800px);
+}
+.sign-up-mode .sign-in-desc img,
+.sign-up-mode .sign-in-desc .content {
+  transform: translateX(0);
+}
+
+.sign-up-mode .sign-up-desc img,
+.sign-up-mode .sign-up-desc .content {
+  transform: translateX(-800px);
+}
+
+.sign-up-btn,
+.sign-in-btn {
+  outline: none;
+  padding: 6px 8px;
+  min-width: 100px;
+  text-align: center;
+  border-radius: 3px;
+  border: 2px solid #fff;
+  background: none;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.sign-up-btn:hover,
+.sign-in-btn:hover {
+  background: rgba(2, 2, 2, 0.3);
+}
+.sign-up-btn:active,
+.sign-in-btn:active {
+  background: rgba(255, 255, 255, 0.1);
+}
+img {
+  width: 100%;
+  display: block;
+  transition: transform 0.9s ease-in-out;
+  transition-delay: 0.5s;
+}
+.email-wrap {
+  display: flex;
+  .check-input {
+    width: 190px;
+    min-width: 180px;
+    outline: none;
+    padding: 12px 30px;
+    line-height: 1;
+    font-size: 16px;
+    border-radius: 3px;
+    color: #333;
+    border: none;
+  }
+  .check-input::placeholder {
+    color: #cccc;
+  }
+  .submit-check-btn {
+    width: 110px;
+    min-width: 110px;
+    outline: none;
+    padding: 12px 10px;
+    line-height: 1;
+    font-size: 16px;
+    border: none;
+    background-color: #04befe;
+    color: #fff;
+    text-align: center;
+    font-weight: bold;
+    letter-spacing: 1.5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  .submit-check-btn:hover {
+    background-color: #007ea9;
+  }
+}
+/* 响应式 */
+@media screen and (max-width: 870px) {
+  .container::before {
+    width: 1500px;
+    height: 1500px;
+    transform: translateX(-50%);
+    left: 30%;
+    bottom: 68%;
+    right: initial;
+    top: initial;
+    transition: 2s ease-in-out;
+  }
+  .container.sign-up-mode::before {
+    transform: translate(-50%, 100%);
+    bottom: 32%;
+    right: initial;
+  }
+  .form-warp {
+    width: 100%;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, -100%);
+    transition: 1s 0.8s ease-in-out;
+  }
+  .container.sign-up-mode .form-warp {
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+  img {
+    width: 200px;
+    transition: transform 0.9s ease-in-out;
+    transition-delay: 0.7s;
+  }
+  .desc-warp {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 2fr 1fr;
+  }
+  .desc-warp-item {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 2.5rem 8%;
+    grid-column: 1 / 2;
+  }
+  .sign-in-desc {
+    grid-row: 3 / 4;
+  }
+
+  .sign-in-desc img,
+  .sign-in-desc .content {
+    transform: translateY(800px);
+  }
+
+  .sign-up-mode .sign-in-desc img,
+  .sign-up-mode .sign-in-desc .content {
+    transform: translateY(0);
+  }
+
+  .sign-up-mode .sign-up-desc img,
+  .sign-up-mode .sign-up-desc .content {
+    transform: translateY(-800px);
+  }
+}
+
+@media screen and (max-width: 570px) {
+  .container::before {
+    bottom: 72%;
+    left: 50%;
+  }
+  img {
+    display: none;
+  }
 }
