--- a/src/components/SiderBar/index.less
+++ b/src/components/SiderBar/index.less
@@ -1,11 +1,12 @@
-.sidebar-wrap, .menu-wrap {
+.sidebar-wrap,
+.menu-wrap {
+  background-image: linear-gradient(45deg, #002649 0%, #004f6a 100%);
   position: sticky;
   top: 0;
   height: 100vh;
 }
 
 .menu-wrap {
-
   width: 100%;
 }
 
