--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -7,7 +7,8 @@
 	display: flex;
 	align-items: center;
 	height: 58px;
-	background: #002649;
+  background-image: linear-gradient(45deg, #002649 0%, #004f6a 100%);
+
   top: 0;
 }
 
