feat：注册验证码更新

--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -229,8 +229,8 @@ img {
 .email-wrap {
   display: flex;
   .check-input {
-    width: 190px;
-    min-width: 180px;
+    width: 170px;
+    min-width: 160px;
     outline: none;
     padding: 12px 30px;
     line-height: 1;
@@ -243,8 +243,9 @@ img {
     color: #cccc;
   }
   .submit-check-btn {
-    width: 110px;
-    min-width: 110px;
+    width: 130px;
+    height: 43px;
+    min-width: 130px;
     outline: none;
     padding: 12px 10px;
     line-height: 1;
