--- a/src/pages/overview/UserLabel/index.less
+++ b/src/pages/overview/UserLabel/index.less
@@ -2,6 +2,7 @@
     background: white;
     padding: 20px;
     display: flex;
+    margin-bottom: 20px;
     .userlable-right{
         margin-left: 20px;
     }
