feat：编辑用户信息新增

--- a/src/pages/overview/UserLabel/index.less
+++ b/src/pages/overview/UserLabel/index.less
@@ -1,9 +1,16 @@
-.userlable{
-    background: white;
-    padding: 20px;
+.userlable {
+  background: white;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  .userlable-left {
     display: flex;
-    margin-bottom: 20px;
-    .userlable-right{
-        margin-left: 20px;
+    .user-detail {
+      margin-left: 20px;
     }
+  }
+  .userlable-right {
+    margin-left: 20px;
+  }
 }
