--- a/src/style/antd.less
+++ b/src/style/antd.less
@@ -7,3 +7,12 @@
   box-shadow: 1px 1px 2px #002649;
   top: 0;
 }
+.ant-empty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  margin: 0 !important;
+}
