--- a/src/pages/task/TaskPlan/TaskList/index.less
+++ b/src/pages/task/TaskPlan/TaskList/index.less
@@ -2,6 +2,9 @@
   .title {
     font-weight: bolder;
   }
+  .plan-wrap {
+    margin-bottom: 20px;
+  }
   .monitor-task {
     width: 20rem;
     height: 8rem;
