--- a/src/components/SiderBar/index.less
+++ b/src/components/SiderBar/index.less
@@ -27,3 +27,15 @@
   line-height: 32px;
   font-size: 16px;
 }
+.sider-header-hide{
+  margin-top: 8px;
+  width: 100%;
+  height: 50px;
+  background-image: url(../../assets/logo-hide.png);
+  background-position-x: center;
+  background-repeat: no-repeat;
+  background-size: 55%;
+  color: #fff;
+  line-height: 32px;
+  font-size: 16px;
+}
