--- a/src/pages/hotel/HotelStudyRoad/index.less
+++ b/src/pages/hotel/HotelStudyRoad/index.less
@@ -1,16 +1,15 @@
 .comment-wrap {
+  height: 450px;
   padding: 10px;
   opacity: 1;
-  visibility: visible;
-  transition: all 0.25s;
   background: rgb(239, 245, 250);
+  transition: all 0.25s;
 }
 .comment-wrap-hide {
-  padding: 10px;
   height: 0;
+  padding: 10px;
   overflow: hidden;
   opacity: 0;
-  visibility: hidden;
   transition: all 0.25s;
 }
 .comment-btn-hide {
