--- a/src/pages/setting/PersonalSetting/index.less
+++ b/src/pages/setting/PersonalSetting/index.less
@@ -1,23 +1,7 @@
-.mid {
-   display: flex;
-   justify-content: space-between;
-   width: 100%;
-   margin-bottom: 20px;
-   .mid-left,.mid-right{
-    height: 402px;
-    background: #FFFFFF;
-    border-radius: 2px;
-   }
-   .mid-left{
-     width: 65%;
-   }
-   .mid-right{
-    width: 33% ;
-   }
-}
-.foot{
-  width: 100%;
-  min-height: 402px;
-  background: #FFFFFF;
-  border-radius: 2px;
+.wrap {
+  width: 90%;
+  margin: 0 auto;
+  .item {
+    margin-top: 20px;
+  }
 }
