feat：个人设置更新

--- a/src/pages/setting/PersonalSetting/UpdataModal/index.less
+++ b/src/pages/setting/PersonalSetting/UpdataModal/index.less
@@ -1,9 +1,22 @@
 .ava-list {
-    margin-top: 12px;
-    display: flex;
+  margin-top: 12px;
+  display: flex;
 }
 .ava-img {
-    width: 64px;
-    height: 64px;
-    cursor: pointer;
+  width: 64px;
+  height: 64px;
+  cursor: pointer;
+}
+.code-wrap {
+  width: 50vw;
+  height: 50vw;
+  max-width: 300px;
+  max-height: 300px;
+  background: black;
+  margin: 10px auto;
+}
+
+.email-wrap {
+  display: flex;
+  
 }
