feat：聊天室视图

--- a/src/style/antd.less
+++ b/src/style/antd.less
@@ -16,3 +16,9 @@
   height: 100%;
   margin: 0 !important;
 }
+.ant-chat-wrap {
+  .ant-input:focus {
+    box-shadow: none;
+    border-right-width: 0ch;
+  }
+}
