--- a/src/pages/other/Chat/ChatList/index.less
+++ b/src/pages/other/Chat/ChatList/index.less
@@ -8,4 +8,17 @@
     margin-bottom: 15px;
     overflow: hidden;
   }
+  .get-receive {
+    display: block;
+    margin-top: -15px;
+    width: 100%;
+    text-align: center;
+    font-size: 12px;
+    color: rgba(73, 73, 73, 0.6);
+    transition: all 0.25s;
+    cursor: pointer;
+  }
+  .get-receive:hover {
+    color: rgba(73, 73, 73, 0.3);
+  }
 }
